[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/GUI/Menus/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Buttons/button_focus.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/GUI/Buttons/button_normal.png" type="Texture2D" id=3]
[ext_resource path="res://Assets/GUI/Buttons/button_pressed.png" type="Texture2D" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	COLOR = vec4(.6, .6, .6, .8);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void fragment() {
	COLOR = vec4(.6, .6, .6, .8);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.70605e-05
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -204.0
offset_right = 208.0
offset_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyScreen" type="VBoxContainer" parent="Background"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 35.0
offset_right = -35.0
offset_bottom = -35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DungeonTitle" type="Label" parent="Background/LobbyScreen"]
offset_right = 330.0
offset_bottom = 14.0
text = "Dungeon Number: "
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/LobbyScreen"]
offset_top = 18.0
offset_right = 330.0
offset_bottom = 63.0
custom_minimum_size = Vector2( 0, 45 )

[node name="PlayersTitle" type="Label" parent="Background/LobbyScreen"]
offset_top = 67.0
offset_right = 330.0
offset_bottom = 81.0
text = "Players"

[node name="Player0" type="Label" parent="Background/LobbyScreen"]
offset_top = 85.0
offset_right = 330.0
offset_bottom = 99.0
text = "Player0: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player0"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" type="Label" parent="Background/LobbyScreen"]
offset_top = 103.0
offset_right = 330.0
offset_bottom = 117.0
text = "Player1: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player1"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Label" parent="Background/LobbyScreen"]
offset_top = 121.0
offset_right = 330.0
offset_bottom = 135.0
text = "Player2: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player2"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3" type="Label" parent="Background/LobbyScreen"]
offset_top = 139.0
offset_right = 330.0
offset_bottom = 153.0
text = "Player3: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player3"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4" type="Label" parent="Background/LobbyScreen"]
offset_top = 157.0
offset_right = 330.0
offset_bottom = 171.0
text = "Player4: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player4"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player5" type="Label" parent="Background/LobbyScreen"]
offset_top = 175.0
offset_right = 330.0
offset_bottom = 189.0
text = "Player5: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player5"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player6" type="Label" parent="Background/LobbyScreen"]
offset_top = 193.0
offset_right = 330.0
offset_bottom = 207.0
text = "Player6: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player6"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player7" type="Label" parent="Background/LobbyScreen"]
offset_top = 211.0
offset_right = 330.0
offset_bottom = 225.0
text = "Player7: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Background/LobbyScreen/Player7"]
offset_left = 58.0
offset_right = 173.0
offset_bottom = 14.0
text = "player_name_goes_here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyButton" type="TextureButton" parent="Background/LobbyScreen"]
offset_left = 107.0
offset_top = 229.0
offset_right = 222.0
offset_bottom = 289.0
custom_minimum_size = Vector2( 115, 60 )
size_flags_horizontal = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )
expand = true

[node name="ReadyLabel" type="Label" parent="Background/LobbyScreen/ReadyButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Ready"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Background/LobbyScreen/ReadyButton" to="." method="_on_ReadyButton_toggled"]
